# libzakform

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libzakform.pc.in
debian/: changelog  control  copyright  gbp.conf  libzakform-dev.install  libzakform.dirs  libzakform.install  rules
debian/patches/: 0001-DESTDIR-support.patch  0002-aclocal-old-version.patch  0003-Glib-old-version.patch  0004-Glib-old-version-gobject-macro.patch  0005-Glib-old-version-private.patch  0006-Some-new-functions-not-replaced.patch  0007-Glib-old-version-private.patch  0008-Glib-old-macro-for-ZakFormValidatorComposite.patch  0009-Glib-old-version-private.patch  0010-Glib-old-version-private.patch  series
docs/: notes.txt
docs/reference/: Makefile.am  libzakform-docs.xml  libzakform-sections.txt  libzakform.types
po/: POTFILES.in  it.po
src/: Makefile.am  commons.c  commons.h  form.c  form.h  formelement.c  formelement.h  formelementarray.c  formelementarray.h  formelementextension.c  formelementextension.h  formelementfilter.c  formelementfilter.h  formelementfilterluc.c  formelementfilterluc.h  formelementfiltertrim.c  formelementfiltertrim.h  formelementifilter.c  formelementifilter.h  formelementivalidator.c  formelementivalidator.h  formelementvalidator.c  formelementvalidator.h  formelementvalidatordate.c  formelementvalidatordate.h  formelementvalidatornotempty.c  formelementvalidatornotempty.h  formelementvalidatorregex.c  formelementvalidatorregex.h  formiprovider.c  formiprovider.h  formvalidator.c  formvalidator.h  formvalidatorcompare.c  formvalidatorcompare.h  formvalidatorcomparedate.c  formvalidatorcomparedate.h  formvalidatorcomposite.c  formvalidatorcomposite.h  libzakform.h
tests/: Makefile.am
